--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,9 +27,9 @@
 
       <!-- Google Fonts -->
 
-      <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@200&family=Oswald:wght@500&family=Satisfy&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Lobster&family=Merriweather:wght@300&family=Montserrat:wght@200&family=Oswald:wght@500&family=Rochester&family=Satisfy&family=Tangerine:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
       <!-- Unni is this Bootstrap????? -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
