--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://user-images.githubusercontent.com/76985777/162620513-5b7dcb0f-62bf-42f5-bc4e-8e9897832ac2.png" />
+    <link
+      rel="icon"
+      href="https://user-images.githubusercontent.com/76985777/162620513-5b7dcb0f-62bf-42f5-bc4e-8e9897832ac2.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -25,16 +28,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-      <!-- Google Fonts -->
+    <!-- Google Fonts -->
 
-          <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Lobster&family=Merriweather:wght@300&family=Montserrat:wght@200&family=Oswald:wght@500&family=Rochester&family=Satisfy&family=Tangerine:wght@700&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Lobster&family=Merriweather:wght@300&family=Montserrat:wght@200&family=Oswald:wght@500&family=Rochester&family=Satisfy&family=Tangerine:wght@700&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
 
-      <!-- Unni is this Bootstrap????? -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <script src="https://kit.fontawesome.com/ef57208a6e.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/ef57208a6e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Narrow-Links</title>
   </head>
   <body>
@@ -50,6 +56,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
