--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,11 +36,17 @@
       href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Lobster&family=Merriweather:wght@300&family=Montserrat:wght@200&family=Oswald:wght@500&family=Rochester&family=Satisfy&family=Tangerine:wght@700&family=Ubuntu:wght@300&display=swap"
       rel="stylesheet"
     />
-
     <script
       src="https://kit.fontawesome.com/ef57208a6e.js"
       crossorigin="anonymous"
     ></script>
+    <!--  Bootstrap CSS CDN-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap JS Script -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
